# digital-karesansui

./: AGENTS.md  dev.sh  phase2-mockup.html  pyproject.toml  requirements.txt
app/: config.py  main.py
app/pubsub/: listener.py
app/ws/: connection_manager.py  router.py
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.module.css  App.tsx  main.tsx
frontend/src/components/BottomBar/: BottomBar.module.css  BottomBar.tsx
frontend/src/components/BottomBar/ActionButtons/: ActionButtons.module.css  ActionButtons.tsx
frontend/src/components/BottomBar/ConnectionStatus/: ConnectionStatus.module.css  ConnectionStatus.tsx
frontend/src/components/BottomBar/RttDisplay/: RttDisplay.module.css  RttDisplay.tsx
frontend/src/components/TopBar/: TopBar.module.css  TopBar.tsx
frontend/src/components/TopBar/AvatarCluster/: AvatarCluster.module.css  AvatarCluster.tsx
frontend/src/components/TopBar/Logo/: Logo.module.css  Logo.tsx
frontend/src/components/TopBar/ModeSelector/: ModeSelector.module.css  ModeSelector.tsx
frontend/src/components/TopBar/PingIndicator/: PingIndicator.module.css  PingIndicator.tsx
frontend/src/components/TopBar/RoomChip/: RoomChip.module.css  RoomChip.tsx
frontend/src/components/WorkArea/: WorkArea.module.css  WorkArea.tsx
frontend/src/context/: GardenContext.tsx  GardenProvider.tsx  gardenReducer.ts  useGarden.ts
frontend/src/hooks/: useGardenSocket.ts
frontend/src/styles/: tokens.css
frontend/src/types/: garden.ts
frontend/src/utils/: userId.ts
(+25 files in other folders)
