[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "karesansui-phase1-backend"
version = "0.1.0"
description = "Real-time multiplayer Digital Karesansui — Phase 1 Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "websockets==13.1",
    "redis[asyncio]==5.2.0",
    "pydantic-settings==2.6.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
